# 1money-interoperability-protocol

./: .gitignore  .gitmodules  README.md
.github/: typos.toml
.github/workflows/: fmt.yaml  foundry.yaml  rust.yaml
code/: .gitignore  Cargo.toml  README.md  foundry.toml  justfile  rustfmt.toml  taplo.toml
code/crates/onemoney_interop/: Cargo.toml  build.rs
code/crates/onemoney_interop/src/: contract.rs  error.rs  event.rs  lib.rs
code/crates/onemoney_interop/tests/: event_stream.rs
code/crates/relayer/: Cargo.toml
code/crates/relayer/src/: cli.rs  error.rs  lib.rs  main.rs
code/crates/relayer/src/config/: error.rs  mod.rs
code/crates/relayer/src/incoming/: error.rs  handlers.rs  mod.rs  recovery.rs
code/crates/relayer/src/onemoney/: error.rs  mod.rs  stream.rs  tests.rs  transaction.rs  types.rs
code/crates/relayer/src/onemoney/tests/: epochs.rs  mod.rs  query_transactions.rs  utils.rs
code/crates/relayer/src/onemoney/tests/data/: checkpoint.json
code/crates/relayer/src/onemoney/types/: epoch.rs  mod.rs  transaction.rs  utils.rs  validator.rs
code/crates/relayer/src/outgoing/: error.rs  mod.rs  recovery.rs  relay.rs  stream.rs
code/crates/relayer/src/poa/: error.rs  mod.rs
code/crates/relayer/src/sidechain/: error.rs  mod.rs
code/crates/relayer/tests/: burn_and_bridge.rs  deposit.rs  replay.rs  tx_hash_mapping.rs  withdrawal.rs
code/crates/relayer/tests/utils/: account.rs  mod.rs  operator.rs  setup.rs
code/crates/relayer/tests/utils/transaction/: burn_and_bridge.rs  mod.rs  types.rs
code/crates/validator_manager/: Cargo.toml
code/crates/validator_manager/src/: lib.rs
code/scripts/: relay.sh  toggle_validator_set.sh
code/solidity/: README.md
code/solidity/script/: DeployOMInterop.s.sol
code/solidity/src/: IOMInterop.sol  IPriceOracle.sol  LZInterop.sol  OMInterop.sol  OMInteropStorage.sol  OMInteropTypes.sol  OMOFT.sol  PriceOracle.sol  TxHashMapping.sol
code/solidity/test/: LZInterop.t.sol  LayerZero.t.sol  OMInterop.Upgrade.t.sol  OMInterop.t.sol  OMInteropV2.sol  PriceOracle.t.sol  TxHashMapping.t.sol
docs/: devnet.md  sidechain.md  testnet.md
docs/adr/: README.md
docs/architecture/: adr-001-interoperability-protocol.md  adr-002-proof-of-authority.md
guide/interoperability/: book.toml
guide/interoperability/src/: SUMMARY.md  relayer.md
