[workspace]
resolver = "2"
members  = [ "crates/relayer", "crates/validator_manager" ]

[workspace.package]
version      = "0.0.0"
edition      = "2021"
license      = "Apache-2.0"
authors      = [ "Informal Systems <hello@informal.systems>" ]
rust-version = "1.83"

[workspace.dependencies]
clap               = { version = "4" }
color-eyre         = { version = "0.6" }
async-stream       = { version = "0.3" }
futures            = { version = "0.3" }
thiserror          = { version = "2" }
reqwest            = { version = "0.12" }
serde              = { version = "1" }
url                = { version = "2" }
tokio              = { version = "1" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
hex                = { version = "0.4" }
sha3               = { version = "0.10" }
httpmock           = { version = "0.8" }
serde_json         = { version = "1" }
humantime          = { version = "2" }

alloy-provider     = { version = "1" }
alloy-primitives   = { version = "1" }
alloy-signer-local = { version = "1" }
alloy-sol-types    = { version = "1" }
alloy-contract     = { version = "1" }
alloy-signer       = { version = "1" }
alloy-sol-macro    = { version = "1" }
alloy-rpc-types    = { version = "1" }

onemoney-protocol = { version = "0.6.0" }

# local crates
validator_manager = { path = "crates/validator_manager" }

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"
