[workspace]
resolver = "2"
members  = [ "crates/relayer", "crates/validator_manager", "crates/onemoney_interop" ]

[workspace.package]
version      = "0.0.0"
edition      = "2021"
license      = "Apache-2.0"
authors      = [ "Informal Systems <hello@informal.systems>" ]
rust-version = "1.83"

[workspace.dependencies]
clap               = { version = "4" }
color-eyre         = { version = "0.6" }
async-stream       = { version = "0.3" }
futures            = { version = "0.3" }
thiserror          = { version = "2" }
reqwest            = { version = "0.12" }
serde              = { version = "1" }
test-log           = { version = "0.2", features = [ "trace" ] }
url                = { version = "2" }
tokio              = { version = "1" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
hex                = { version = "0.4" }
sha3               = { version = "0.10" }
httpmock           = { version = "0.8" }
serde_json         = { version = "1" }
humantime          = { version = "2" }
rstest             = { version = "0.26" }

alloy-provider       = { version = "1" }
alloy-primitives     = { version = "1" }
alloy-signer-local   = { version = "1" }
alloy-sol-types      = { version = "1" }
alloy-contract       = { version = "1" }
alloy-signer         = { version = "1" }
alloy-sol-macro      = { version = "1" }
alloy-rpc-types      = { version = "1" }
alloy-rpc-types-eth  = { version = "1" }
alloy-transport      = { version = "1" }
alloy-node-bindings  = { version = "1" }
alloy-transport-http = { version = "1" }
alloy-rlp            = { version = "0.3" }

onemoney-protocol = { version = "0.11.1", features = [ "bridge" ] }

# local crates
validator_manager = { path = "crates/validator_manager" }
onemoney_interop  = { path = "crates/onemoney_interop" }

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"
std_instead_of_core           = "deny"
